--- a/a.html
+++ b/a.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>你好！</h1>
-    <h3><a href="a.html">跳转到a.html</a></h3>
+    <h1>这是a.html</h1>
 </body>
 </html>
